--- a/libunclesampler/src/main/resources/application.properties
+++ b/libunclesampler/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=libunclesampler
+
+# MySQL setup
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/libunclesamplerdb
+spring.datasource.username=myuser
+spring.datasource.password=secret
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql: true
